--- a/assessment.ipynb
+++ b/assessment.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# scrape the data"
+    "# scrape the names of the items on the webpage above"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +93,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a function that calculates the zscores of an array"
+    "# load in the dataframe, notice it only contains columns salaries, NPS Score, eventOutcome"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def zscores(arr):\n",
+    "    \"\"\"\n",
+    "    write a function that calculates \n",
+    "    the zscores of a numpy arr, arr.\n",
+    "    \"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,15 +197,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bonus:\n",
+    "# Level Up:\n",
     "* using np.where find salaries with zscores <= -2.0\n",
     "\n",
-    "* calculate the skewness and kurtosis for the NPS Score column"
+    "* calculate the skewness and kurtosis for the NPS Score column\n",
+    "\n",
+    "* plot the pdf and cdf of a given distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,11 +216,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# calculate skewness and kurtosis of NPS Score column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plotting a pdf and cdf of a normal distribution\n",
+    "A survey is taken that finds that students send an mean average of 80 DMs a day with a standard deviation of 6 DMS. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the pdf and cdf of this normal distribution. level up if you can do it in subplots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# what is the probability of drawing a student that sends at least 82 DMs a day?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A second survey is taken at another bootcamp that shows that students send a mean average of\n",
+    "80 DMs a day, but they have a standard deviation of 9 DMS.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What is the difference in the probability of finding a student that sends, at most, 65 DMs a day? "
    ]
   },
   {
@@ -226,9 +285,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:flatiron-env] *",
+   "display_name": "flatiron-env",
    "language": "python",
-   "name": "conda-env-flatiron-env-py"
+   "name": "flatiron-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -240,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
